--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id='mygame'></div>
-  <script src='http://localhost:8080/static/index.js'></script>
+  <script src='./static/index.js'></script>
 </body>
 
 </html>
